<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="5sp"
    android:paddingRight="5sp"
    tools:context=".RecomendacionesActivity">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_uno" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_dos" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_tres" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_cuatro" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_cinco" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_seis" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_siete" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_ocho" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_nueve" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="5sp"
        android:layout_marginRight="15sp"
        android:layout_marginBottom="5sp"
        android:text="@string/recom_fuente" />
</LinearLayout>